--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Egret</title>
+    <title>游戏</title>
     <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="true"/>
@@ -36,8 +36,12 @@
 
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/LoadingUI.js"></script>
+	<script egret="game" src="bin-debug/helpers/AlignHelpers.js"></script>
+	<script egret="game" src="bin-debug/helpers/RESHelpers.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/model/Align.js"></script>
+	<script egret="game" src="bin-debug/model/AlignContainer.js"></script>
+	<script egret="game" src="bin-debug/ui/LoadingUI.js"></script>
 	<!--game_files_end-->
 </head>
 <body>
@@ -45,7 +49,7 @@
     <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
-         data-scale-mode="showAll"
+         data-scale-mode="fixedWidth"
          data-frame-rate="30"
          data-content-width="720"
          data-content-height="1155"
