--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	<script egret="game" src="bin-debug/ui/GameUI.js"></script>
 	<script egret="game" src="bin-debug/ui/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/ui/MonkUI.js"></script>
+	<script egret="game" src="bin-debug/ui/MusicPlayer.js"></script>
 	<script egret="game" src="bin-debug/ui/WelcomeUI.js"></script>
 	<!--game_files_end-->
 </head>
