替换开始游戏界面

--- a/index.html
+++ b/index.html
@@ -36,22 +36,24 @@
 
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/model/Point.js"></script>
+	<script egret="game" src="bin-debug/model/MusicPlayer.js"></script>
 	<script egret="game" src="bin-debug/events/GameOverEvent.js"></script>
 	<script egret="game" src="bin-debug/helpers/AlignHelpers.js"></script>
 	<script egret="game" src="bin-debug/helpers/Helpers.js"></script>
 	<script egret="game" src="bin-debug/helpers/RESHelpers.js"></script>
+	<script egret="game" src="bin-debug/helpers/StaticData.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/model/Align.js"></script>
 	<script egret="game" src="bin-debug/model/AlignContainer.js"></script>
 	<script egret="game" src="bin-debug/events/WindowCloseEvent.js"></script>
+	<script egret="game" src="bin-debug/model/Point.js"></script>
 	<script egret="game" src="bin-debug/ui/BarUI.js"></script>
 	<script egret="game" src="bin-debug/ui/EnemyUI.js"></script>
 	<script egret="game" src="bin-debug/ui/GameOverUI.js"></script>
 	<script egret="game" src="bin-debug/ui/GameUI.js"></script>
+	<script egret="game" src="bin-debug/ui/HelpUI.js"></script>
 	<script egret="game" src="bin-debug/ui/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/ui/MonkUI.js"></script>
-	<script egret="game" src="bin-debug/ui/MusicPlayer.js"></script>
 	<script egret="game" src="bin-debug/ui/WelcomeUI.js"></script>
 	<!--game_files_end-->
 </head>
