--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <title>游戏</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="full-screen" content="true"/>
-    <meta name="screen-orientation" content="portrait"/>
-    <meta name="x5-fullscreen" content="true"/>
-    <meta name="360-fullscreen" content="true"/>
+    <title>唐僧五一游记</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="full-screen" content="true" />
+    <meta name="screen-orientation" content="portrait" />
+    <meta name="x5-fullscreen" content="true" />
+    <meta name="360-fullscreen" content="true" />
     <style>
         html, body {
             -ms-touch-action: none;
@@ -18,10 +19,19 @@
             margin: 0;
             height: 100%;
         }
+        #qr{
+            position: fixed;
+            top: 20%;
+            left: 15%;
+            width: 70%;
+            z-index: 100;
+            text-align: center;
+            visibility:hidden;
+        }
     </style>
 
-    <!--这个标签为通过egret提供的第三方库的方式生成的 javascript 文件。删除 modules_files 标签后，库文件加载列表将不会变化，请谨慎操作！-->
-    <!--modules_files_start-->
+<!--这个标签为通过egret提供的第三方库的方式生成的 javascript 文件。删除 modules_files 标签后，库文件加载列表将不会变化，请谨慎操作！-->
+<!--modules_files_start-->
 	<script egret="lib" src="libs/modules/egret/egret.js" src-release="libs/modules/egret/egret.min.js"></script>
 	<script egret="lib" src="libs/modules/egret/egret.web.js" src-release="libs/modules/egret/egret.web.min.js"></script>
 	<script egret="lib" src="libs/modules/game/game.js" src-release="libs/modules/game/game.min.js"></script>
@@ -29,24 +39,30 @@
 	<script egret="lib" src="libs/modules/tween/tween.js" src-release="libs/modules/tween/tween.min.js"></script>
 	<!--modules_files_end-->
 
-    <!--这个标签为不通过egret提供的第三方库的方式使用的 javascript 文件，请将这些文件放在libs下，但不要放在modules下面。-->
-    <!--other_libs_files_start-->
-    <script egret="lib" src="polyfill/promise.js" src-release="polyfill/promise.min.js"></script>
-    <!--other_libs_files_end-->
+<!--这个标签为不通过egret提供的第三方库的方式使用的 javascript 文件，请将这些文件放在libs下，但不要放在modules下面。-->
+<!--other_libs_files_start-->
+<script egret="lib" src="polyfill/promise.js" src-release="polyfill/promise.min.js"></script>
+<script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<!--other_libs_files_end-->
 
-    <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
-    <!--game_files_start-->
-	<script egret="game" src="bin-debug/model/MusicPlayer.js"></script>
+<!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
+<!--game_files_start-->
+	<script egret="game" src="bin-debug/model/Rank.js"></script>
 	<script egret="game" src="bin-debug/events/GameOverEvent.js"></script>
 	<script egret="game" src="bin-debug/helpers/AlignHelpers.js"></script>
 	<script egret="game" src="bin-debug/helpers/Helpers.js"></script>
 	<script egret="game" src="bin-debug/helpers/RESHelpers.js"></script>
 	<script egret="game" src="bin-debug/helpers/StaticData.js"></script>
+	<script egret="game" src="bin-debug/helpers/WeChatApiHelper.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/model/Align.js"></script>
 	<script egret="game" src="bin-debug/model/AlignContainer.js"></script>
-	<script egret="game" src="bin-debug/events/WindowCloseEvent.js"></script>
+	<script egret="game" src="bin-debug/model/MockData.js"></script>
+	<script egret="game" src="bin-debug/model/MusicPlayer.js"></script>
 	<script egret="game" src="bin-debug/model/Point.js"></script>
+	<script egret="game" src="bin-debug/events/WindowCloseEvent.js"></script>
+	<script egret="game" src="bin-debug/model/RankViewModel.js"></script>
 	<script egret="game" src="bin-debug/ui/BarUI.js"></script>
 	<script egret="game" src="bin-debug/ui/EnemyUI.js"></script>
 	<script egret="game" src="bin-debug/ui/GameOverUI.js"></script>
@@ -54,32 +70,91 @@
 	<script egret="game" src="bin-debug/ui/HelpUI.js"></script>
 	<script egret="game" src="bin-debug/ui/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/ui/MonkUI.js"></script>
+	<script egret="game" src="bin-debug/ui/RankListView.js"></script>
+	<script egret="game" src="bin-debug/ui/RankUI.js"></script>
+	<script egret="game" src="bin-debug/ui/RankView.js"></script>
 	<script egret="game" src="bin-debug/ui/WelcomeUI.js"></script>
 	<!--game_files_end-->
 </head>
+
 <body>
 
-    <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
-         data-entry-class="Main"
-         data-orientation="auto"
-         data-scale-mode="fixedWidth"
-         data-frame-rate="30"
-         data-content-width="720"
-         data-content-height="1155"
-         data-show-paint-rect="false"
-         data-multi-fingered="2"
-         data-show-fps="false" data-show-log="false"
-         data-show-fps-style="x:0,y:0,size:12,textColor:0xffffff,bgAlpha:0.9">
-    </div>
-    <script>
-        /**
-         * {
-         * "renderMode":, //引擎渲染模式，"canvas" 或者 "webgl"
-         * "audioType": "" //使用的音频类型，0:默认，1:qq audio，2:web audio，3:audio
-         * "antialias": //WebGL模式下是否开启抗锯齿，true:开启，false:关闭，默认为false
-         * }
-         **/
-        egret.runEgret({renderMode:"webgl", audioType:0});
-    </script>
+    <div style="margin: auto;width: 100%;height: 100%;" class="egret-player" data-entry-class="Main" data-orientation="auto" data-scale-mode="fixedWidth" data-frame-rate="30"
+data-content-width="720" data-content-height="1155" data-show-paint-rect="false" data-multi-fingered="2" data-show-fps="false"
+data-show-log="false" data-show-fps-style="x:0,y:0,size:12,textColor:0xffffff,bgAlpha:0.9">
+</div>
+<img id="qr" src="./resource/assets/qrcode.jpg">
+<script>
+    function initWeChat() {
+        $.ajax({
+            type: "POST",
+            url: 'http://app.guzhiwei.com/wxis/api/WeChat/JsApiSignature?companyCode=guzhiwei&url=' + encodeURIComponent(window.location.href),
+            success: function (res) {
+                if (res == null || res.IsSuccessful != true) {
+                    return;
+                }
+                var wxConfig = res.Data;
+                wx.config({
+                    debug: false,
+                    appId: wxConfig.appId,
+                    timestamp: wxConfig.timestamp,
+                    nonceStr: wxConfig.nonceStr,
+                    signature: wxConfig.signature,
+                    jsApiList: [
+                        'checkJsApi',
+                        'onMenuShareTimeline',
+                        'onMenuShareAppMessage',
+                        'onMenuShareQQ',
+                        'onMenuShareWeibo',
+                        'hideAllNonBaseMenuItem',
+                        'showMenuItems'
+                    ]
+                });
+                wx.ready(function () {
+                    var wxshareData = {
+                        title: '唐僧五一游记',
+                        desc: '唐僧五一游记',
+                        imgUrl: 'http://app.guzhiwei.com/LightWebApp/EasterDay2017/resource/wechat_share.png',
+                        link: 'http://app.guzhiwei.com/LightWebApp/EasterDay2017',
+                    }
+                    wx.onMenuShareTimeline({
+                        title: wxshareData.title,
+                        link: wxshareData.link + '?source=wechatTimeline',
+                        imgUrl: wxshareData.imgUrl,
+                        success: function (res) {
+                            shareSuccess();
+                        }
+                    });
+
+                    wx.onMenuShareAppMessage({
+                        title: wxshareData.title,
+                        desc: wxshareData.desc,
+                        link: wxshareData.link + '?source=wechatApp',
+                        imgUrl: wxshareData.imgUrl,
+                        success: function (res) {
+                            shareSuccess();
+                        }
+                    });
+
+                    wx.hideAllNonBaseMenuItem();
+                    wx.showMenuItems({
+                        menuList: ['menuItem:share:appMessage', 'menuItem:share:timeline', 'menuItem:share:qq',
+                            'menuItem:share:weiboApp', 'menuItem:favorite']
+                    });
+                });
+            },
+        });
+    };
+    initWeChat();
+    /**
+     * {
+     * "renderMode":, //引擎渲染模式，"canvas" 或者 "webgl"
+     * "audioType": "" //使用的音频类型，0:默认，1:qq audio，2:web audio，3:audio
+     * "antialias": //WebGL模式下是否开启抗锯齿，true:开启，false:关闭，默认为false
+     * }
+     **/
+    egret.runEgret({ renderMode: "canvas", audioType: 0 });
+</script>
 </body>
+
 </html>
