--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	<script egret="game" src="bin-debug/model/RankViewModel.js"></script>
 	<script egret="game" src="bin-debug/ui/BarUI.js"></script>
 	<script egret="game" src="bin-debug/ui/EnemyUI.js"></script>
+	<script egret="game" src="bin-debug/ui/GamehelpUI.js"></script>
 	<script egret="game" src="bin-debug/ui/GameOverUI.js"></script>
 	<script egret="game" src="bin-debug/ui/GameUI.js"></script>
 	<script egret="game" src="bin-debug/ui/HelpUI.js"></script>
