--- a/index.html
+++ b/index.html
@@ -19,15 +19,7 @@
             margin: 0;
             height: 100%;
         }
-        #qr{
-            position: fixed;
-            top: 20%;
-            left: 15%;
-            width: 70%;
-            z-index: 100;
-            text-align: center;
-            visibility:hidden;
-        }
+        
     </style>
 
 <!--这个标签为通过egret提供的第三方库的方式生成的 javascript 文件。删除 modules_files 标签后，库文件加载列表将不会变化，请谨慎操作！-->
@@ -49,7 +41,7 @@
 <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
 <!--game_files_start-->
 <script egret="game" src="bin-debug/model/Rank.js"></script>
-<script egret="game" src="bin-debug/events/GameOverEvent.js"></script>
+<script egret="game" src="bin-debug/model/RankViewModel.js"></script>
 <script egret="game" src="bin-debug/helpers/AlignHelpers.js"></script>
 <script egret="game" src="bin-debug/helpers/Helpers.js"></script>
 <script egret="game" src="bin-debug/helpers/RESHelpers.js"></script>
@@ -61,8 +53,9 @@
 <script egret="game" src="bin-debug/model/MockData.js"></script>
 <script egret="game" src="bin-debug/model/MusicPlayer.js"></script>
 <script egret="game" src="bin-debug/model/Point.js"></script>
+<script egret="game" src="bin-debug/events/GameOverEvent.js"></script>
 <script egret="game" src="bin-debug/events/WindowCloseEvent.js"></script>
-<script egret="game" src="bin-debug/model/RankViewModel.js"></script>
+<script egret="game" src="bin-debug/model/SoundPlayer.js"></script>
 <script egret="game" src="bin-debug/ui/BarUI.js"></script>
 <script egret="game" src="bin-debug/ui/EnemyUI.js"></script>
 <script egret="game" src="bin-debug/ui/GamehelpUI.js"></script>
@@ -84,7 +77,31 @@
 data-content-width="720" data-content-height="1155" data-show-paint-rect="false" data-multi-fingered="2" data-show-fps="false"
 data-show-log="false" data-show-fps-style="x:0,y:0,size:12,textColor:0xffffff,bgAlpha:0.9">
 </div>
-<img id="qr" src="./resource/assets/qrcode.jpg">
+<div id="qr">
+    <div>
+        <img src="./resource/assets/qrcode.jpg">
+    </div>
+    <p>长按二维码关注公众号后方可进行游戏</p>
+    <style>
+    #qr{
+            position: fixed;
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content:center;
+            z-index: 100;
+            width: 100%;
+            height: 100%;
+            top:0;
+            background-color:rgba(0,0, 0,0.8);
+            visibility:hidden;
+        }
+        #qr p{
+            color: white;
+            font-size: 2rem;
+        }
+    </style>
+</div>
 <script>
     function initWeChat() {
         $.ajax({
